# cleaner

./: CMakeLists.txt  main.cpp
lib/: utils.cpp
